--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
 }
