--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    compile 'com.android.support:recyclerview-v7:25.+'
+
 }
