Implementação das do DAO genérico e correção do Model com informações das vagas.

--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.+'
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
+    compile 'javax.inject:javax.inject:1'
 }
