Add a Biblioteca GSON...

--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'javax.inject:javax.inject:1'
+    compile 'com.google.code.gson:gson:2.8.0'
 }
