--- a/app/SINE/app/src/main/AndroidManifest.xml
+++ b/app/SINE/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".FavoriteActivity"></activity>
     </application>
 
 </manifest>
