--- a/app/SINE/app/src/main/AndroidManifest.xml
+++ b/app/SINE/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/SineTheme">
+        android:theme="@style/AppTheme">
 
         <!-- Importa a API responsável por prover os serviços de geolocalização. -->
         <meta-data
