Criação da tela de busca por faixa salárial.

--- a/app/SINE/app/src/main/AndroidManifest.xml
+++ b/app/SINE/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity
             android:name=".FavoriteActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".GraphicActivity"></activity>
+        <activity android:name=".GraphicActivity" />
+        <activity android:name=".SearchForGraphicActivity"></activity>
     </application>
 
 </manifest>
