--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -24,15 +24,18 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.+'
-    testCompile 'junit:junit:4.12'
+
+
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
-    compile 'com.android.support:recyclerview-v7:25.+'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'javax.inject:javax.inject:1'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:support-v4:25.0.1'
+    testCompile 'junit:junit:4.12'
 }
