--- a/app/SINE/.gitignore
+++ b/app/SINE/.gitignore
@@ -7,3 +7,9 @@
 /build
 /captures
 .externalNativeBuild
+
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
