--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cheerio": "latest",
+    "cors": "^2.8.1",
     "express": "latest",
     "express-load": "^1.1.15",
     "http": "0.0.0",
