--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
     defaultConfig {
         applicationId "trabalho.sine"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,20 +23,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.google.android.gms:play-services:+'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:design:26.1.0'
+    compile 'com.google.android.gms:play-services:11.6.2'
+    compile 'com.android.support:multidex:1.0.2'
+    compile 'com.android.support:design:27.0.2'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.j256.ormlite:ormlite-core:+'
-    compile 'com.j256.ormlite:ormlite-android:+'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.jakewharton:butterknife:+'
-    compile 'com.bugfender.sdk:android:0.+'
-    compile 'com.greysonparrelli.permiso:permiso:+'
+    compile 'com.j256.ormlite:ormlite-core:5.0'
+    compile 'com.j256.ormlite:ormlite-android:5.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.greysonparrelli.permiso:permiso:0.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:27.0.2'
 }
