--- a/app/SINE/app/src/main/AndroidManifest.xml
+++ b/app/SINE/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:launchMode="singleTop"
         android:theme="@style/MyMaterialTheme">
 
         <!-- Importa a API responsável por prover os serviços de geolocalização. -->
@@ -37,7 +38,13 @@
             android:name=".activity.FavoriteActivity"
             android:label="@string/title_vagas_favoritas"
             android:screenOrientation="portrait"
-            android:theme="@style/MyMaterialTheme" />
+            android:theme="@style/MyMaterialTheme">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+
+        </activity>
         <activity
             android:name=".activity.GraphicActivity"
             android:label="@string/label_grafico"
@@ -47,17 +54,35 @@
             android:name=".activity.SearchForGraphicActivity"
             android:label="@string/activity_search_graphic_title"
             android:screenOrientation="portrait"
-            android:theme="@style/MyMaterialTheme" />
+            android:theme="@style/MyMaterialTheme">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+
+        </activity>
         <activity
             android:name=".activity.SearchActivity"
             android:label="@string/vagas_disponiveis"
             android:screenOrientation="portrait"
-            android:theme="@style/MyMaterialTheme" />
+            android:theme="@style/MyMaterialTheme">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+
+        </activity>
         <activity
             android:name=".activity.InfoActivity"
             android:label="@string/title_sobre"
             android:screenOrientation="portrait"
-            android:theme="@style/MyMaterialTheme" />
+            android:theme="@style/MyMaterialTheme">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity" />
+
+        </activity>
     </application>
 
 </manifest>
