--- a/app/SINE/app/build.gradle
+++ b/app/SINE/app/build.gradle
@@ -6,10 +6,13 @@ android {
         applicationId "trabalho.sine"
         minSdkVersion 19
         targetSdkVersion 27
+        compileSdkVersion 27
+        buildToolsVersion "27.0.3"
         versionCode 1
-        versionName "1.2"
+        versionName "0.1.2_SIVE_01-18"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -18,24 +21,26 @@ android {
         }
     }
 }
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.google.android.gms:play-services:11.6.2'
-    compile 'com.android.support:multidex:1.0.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
     compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:support-vector-drawable:27.0.2'
+    compile 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
+    compile 'com.android.support:percent:27.0.2'
+    compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.j256.ormlite:ormlite-core:5.0'
     compile 'com.j256.ormlite:ormlite-android:5.0'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.greysonparrelli.permiso:permiso:0.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:27.0.2'
-    compile 'com.android.support:recyclerview-v7:27.0.2'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.android.support:appcompat-v7:27.0.2'
 }
