--- a/app/SINE/build.gradle
+++ b/app/SINE/build.gradle
@@ -1,16 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     repositories {
+        google()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,8 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
+        jcenter()
     }
 }
 
