--- a/app/SINE/app/src/main/AndroidManifest.xml
+++ b/app/SINE/app/src/main/AndroidManifest.xml
@@ -16,15 +16,14 @@
         android:xlargeScreens="true" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:launchMode="singleTop"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
@@ -48,11 +47,9 @@
             android:label="@string/title_vagas_favoritas"
             android:screenOrientation="portrait"
             android:theme="@style/MyMaterialTheme">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
-
         </activity>
         <activity
             android:name=".activity.GraphicActivity"
@@ -64,33 +61,27 @@
             android:label="@string/activity_search_graphic_title"
             android:screenOrientation="portrait"
             android:theme="@style/MyMaterialTheme">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
-
         </activity>
         <activity
             android:name=".activity.SearchActivity"
             android:label="@string/vagas_disponiveis"
             android:screenOrientation="portrait"
             android:theme="@style/MyMaterialTheme">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
-
         </activity>
         <activity
             android:name=".activity.InfoActivity"
             android:label="@string/title_sobre"
             android:screenOrientation="portrait"
             android:theme="@style/MyMaterialTheme">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
-
         </activity>
     </application>
 
