--- a/app/SINE/build.gradle
+++ b/app/SINE/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         google()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
+        maven { url 'https://dl.bintray.com/roman-voronoy/maven/' }
         jcenter()
     }
     dependencies {
@@ -20,6 +21,7 @@ allprojects {
         google()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
+        maven { url 'https://dl.bintray.com/roman-voronoy/maven/' }
         jcenter()
     }
 }
